src/java/olympusParser.java
package java;

// Generated from C:/Users/baton/IdeaProjects/olympus\olympus.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class olympusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, PROGRAM=6, VAR=7, INT=8, DECIMAL=9, 
		STRING=10, CHARACTER=11, BOOL=12, LET=13, PLUS=14, MINUS=15, MULT=16, 
		DIV=17, PERCENT=18, EXP=19, ARRAY=20, AND=21, OR=22, NOT=23, FOR=24, WHILE=25, 
		IF=26, ELSE=27, IN=28, GT=29, LT=30, GEQ=31, LEQ=32, EQ=33, NEQ=34, ASSIGN=35, 
		VOID=36, CLASS=37, IMPORT=38, PACKAGE=39, FUNCTION=40, HERENCIA=41, BRACKET_OPEN=42, 
		BRACKET_CLOSE=43, PAR_OPEN=44, PAR_CLOSE=45, KEY_OPEN=46, KEY_CLOSE=47, 
		SEMICOLON=48, QUOTES=49, DOT=50, IDENTIFIER=51, NUMBER=52, BOOL_V=53, 
		CHAR=54, WHITESPACE=55;
	public static final int
		RULE_start = 0, RULE_program = 1, RULE_sentence = 2, RULE_dlc_int = 3, 
		RULE_dlc_deci = 4, RULE_dlc_string = 5, RULE_dlc_char = 6, RULE_dlc_bool = 7, 
		RULE_empty_string = 8, RULE_if_exception_sentence = 9, RULE_dlc_int2 = 10, 
		RULE_dlc_deci2 = 11, RULE_dlc_string2 = 12, RULE_dlc_char2 = 13, RULE_dlc_bool2 = 14, 
		RULE_dlc_array = 15, RULE_println2 = 16, RULE_print2 = 17, RULE_var_deci = 18, 
		RULE_var_assign = 19, RULE_println = 20, RULE_print = 21, RULE_show = 22, 
		RULE_aritmetic_sentences = 23, RULE_olim_sum = 24, RULE_olim_min = 25, 
		RULE_olim_mult = 26, RULE_olim_div = 27, RULE_olim_per = 28, RULE_dlc_for = 29, 
		RULE_dlc_while = 30, RULE_dlc_if = 31, RULE_if_sentences = 32, RULE_gt_than = 33, 
		RULE_gt_eq_than = 34, RULE_ls_than = 35, RULE_ls_eq_than = 36, RULE_eq_eq = 37, 
		RULE_ne_than = 38, RULE_decitions = 39, RULE_class_type = 40, RULE_public_class = 41, 
		RULE_private_class = 42, RULE_array = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "program", "sentence", "dlc_int", "dlc_deci", "dlc_string", 
			"dlc_char", "dlc_bool", "empty_string", "if_exception_sentence", "dlc_int2", 
			"dlc_deci2", "dlc_string2", "dlc_char2", "dlc_bool2", "dlc_array", "println2", 
			"print2", "var_deci", "var_assign", "println", "print", "show", "aritmetic_sentences", 
			"olim_sum", "olim_min", "olim_mult", "olim_div", "olim_per", "dlc_for", 
			"dlc_while", "dlc_if", "if_sentences", "gt_than", "gt_eq_than", "ls_than", 
			"ls_eq_than", "eq_eq", "ne_than", "decitions", "class_type", "public_class", 
			"private_class", "array"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'stampln'", "'stamp'", "'show'", "'pb'", "'pv'", "'program'", 
			"'var'", "'zeus'", "'kratos'", "'ares'", "'hera'", "'artemis'", "'let'", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'[]'", "'and'", "'or'", "'not'", 
			"'sysiphus'", "'while'", "'if'", "'elses'", "'Is'", "'>'", "'<'", "'=>'", 
			"'=<'", "'=='", "'!='", "'='", "'chaos'", "'class'", "'nemesis'", "'pck'", 
			"'func'", "'Ext'", "'{'", "'}'", "'('", "')'", "'['", "']'", "';'", "'\"'", 
			"'\u00C2\u00B0'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "PROGRAM", "VAR", "INT", "DECIMAL", 
			"STRING", "CHARACTER", "BOOL", "LET", "PLUS", "MINUS", "MULT", "DIV", 
			"PERCENT", "EXP", "ARRAY", "AND", "OR", "NOT", "FOR", "WHILE", "IF", 
			"ELSE", "IN", "GT", "LT", "GEQ", "LEQ", "EQ", "NEQ", "ASSIGN", "VOID", 
			"CLASS", "IMPORT", "PACKAGE", "FUNCTION", "HERENCIA", "BRACKET_OPEN", 
			"BRACKET_CLOSE", "PAR_OPEN", "PAR_CLOSE", "KEY_OPEN", "KEY_CLOSE", "SEMICOLON", 
			"QUOTES", "DOT", "IDENTIFIER", "NUMBER", "BOOL_V", "CHAR", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "olympus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public olympusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof olympusVisitor ) return ((olympusVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public Class_typeContext class_type() {
			return getRuleContext(Class_typeContext.class,0);
		}
		public TerminalNode CLASS() { return getToken(olympusParser.CLASS, 0); }
		public TerminalNode IDENTIFIER() { return getToken(olympusParser.IDENTIFIER, 0); }
		public TerminalNode PAR_OPEN() { return getToken(olympusParser.PAR_OPEN, 0); }
		public TerminalNode PAR_CLOSE() { return getToken(olympusParser.PAR_CLOSE, 0); }
		public TerminalNode BRACKET_OPEN() { return getToken(olympusParser.BRACKET_OPEN, 0); }
		public TerminalNode BRACKET_CLOSE() { return getToken(olympusParser.BRACKET_CLOSE, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof olympusVisitor ) return ((olympusVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			class_type();
			setState(91);
			match(CLASS);
			setState(92);
			match(IDENTIFIER);
			setState(93);
			match(PAR_OPEN);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << VAR) | (1L << INT) | (1L << DECIMAL) | (1L << STRING) | (1L << CHARACTER) | (1L << BOOL) | (1L << IF) | (1L << IDENTIFIER) | (1L << NUMBER))) != 0)) {
				{
				{
				setState(94);
				sentence();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			match(PAR_CLOSE);
			setState(101);
			match(BRACKET_OPEN);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << VAR) | (1L << INT) | (1L << DECIMAL) | (1L << STRING) | (1L << CHARACTER) | (1L << BOOL) | (1L << IF) | (1L << IDENTIFIER) | (1L << NUMBER))) != 0)) {
				{
				{
				setState(102);
				sentence();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			match(BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public Var_deciContext var_deci() {
			return getRuleContext(Var_deciContext.class,0);
		}
		public Var_assignContext var_assign() {
			return getRuleContext(Var_assignContext.class,0);
		}
		public PrintlnContext println() {
			return getRuleContext(PrintlnContext.class,0);
		}
		public Dlc_intContext dlc_int() {
			return getRuleContext(Dlc_intContext.class,0);
		}
		public Dlc_deciContext dlc_deci() {
			return getRuleContext(Dlc_deciContext.class,0);
		}
		public Dlc_stringContext dlc_string() {
			return getRuleContext(Dlc_stringContext.class,0);
		}
		public Dlc_charContext dlc_char() {
			return getRuleContext(Dlc_charContext.class,0);
		}
		public Dlc_ifContext dlc_if() {
			return getRuleContext(Dlc_ifContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public Aritmetic_sentencesContext aritmetic_sentences() {
			return getRuleContext(Aritmetic_sentencesContext.class,0);
		}
		public Dlc_boolContext dlc_bool() {
			return getRuleContext(Dlc_boolContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).exitSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof olympusVisitor ) return ((olympusVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sentence);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				var_deci();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				var_assign();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				println();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				dlc_int();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(114);
				dlc_deci();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(115);
				dlc_string();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(116);
				dlc_char();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(117);
				dlc_if();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(118);
				print();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(119);
				aritmetic_sentences();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(120);
				dlc_bool();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dlc_intContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(olympusParser.INT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(olympusParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(olympusParser.ASSIGN, 0); }
		public TerminalNode NUMBER() { return getToken(olympusParser.NUMBER, 0); }
		public TerminalNode SEMICOLON() { return getToken(olympusParser.SEMICOLON, 0); }
		public Dlc_intContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dlc_int; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).enterDlc_int(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).exitDlc_int(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof olympusVisitor ) return ((olympusVisitor<? extends T>)visitor).visitDlc_int(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dlc_intContext dlc_int() throws RecognitionException {
		Dlc_intContext _localctx = new Dlc_intContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dlc_int);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(INT);
			setState(124);
			match(IDENTIFIER);
			setState(125);
			match(ASSIGN);
			setState(126);
			match(NUMBER);
			setState(127);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dlc_deciContext extends ParserRuleContext {
		public TerminalNode DECIMAL() { return getToken(olympusParser.DECIMAL, 0); }
		public TerminalNode IDENTIFIER() { return getToken(olympusParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(olympusParser.ASSIGN, 0); }
		public TerminalNode NUMBER() { return getToken(olympusParser.NUMBER, 0); }
		public TerminalNode SEMICOLON() { return getToken(olympusParser.SEMICOLON, 0); }
		public Dlc_deciContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dlc_deci; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).enterDlc_deci(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).exitDlc_deci(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof olympusVisitor ) return ((olympusVisitor<? extends T>)visitor).visitDlc_deci(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dlc_deciContext dlc_deci() throws RecognitionException {
		Dlc_deciContext _localctx = new Dlc_deciContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dlc_deci);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(DECIMAL);
			setState(130);
			match(IDENTIFIER);
			setState(131);
			match(ASSIGN);
			setState(132);
			match(NUMBER);
			setState(133);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dlc_stringContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(olympusParser.STRING, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(olympusParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(olympusParser.IDENTIFIER, i);
		}
		public TerminalNode ASSIGN() { return getToken(olympusParser.ASSIGN, 0); }
		public List<TerminalNode> QUOTES() { return getTokens(olympusParser.QUOTES); }
		public TerminalNode QUOTES(int i) {
			return getToken(olympusParser.QUOTES, i);
		}
		public TerminalNode SEMICOLON() { return getToken(olympusParser.SEMICOLON, 0); }
		public Dlc_stringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dlc_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).enterDlc_string(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).exitDlc_string(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof olympusVisitor ) return ((olympusVisitor<? extends T>)visitor).visitDlc_string(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dlc_stringContext dlc_string() throws RecognitionException {
		Dlc_stringContext _localctx = new Dlc_stringContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dlc_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(STRING);
			setState(136);
			match(IDENTIFIER);
			setState(137);
			match(ASSIGN);
			setState(138);
			match(QUOTES);
			setState(139);
			match(IDENTIFIER);
			setState(140);
			match(QUOTES);
			setState(141);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dlc_charContext extends ParserRuleContext {
		public TerminalNode CHARACTER() { return getToken(olympusParser.CHARACTER, 0); }
		public TerminalNode IDENTIFIER() { return getToken(olympusParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(olympusParser.ASSIGN, 0); }
		public TerminalNode CHAR() { return getToken(olympusParser.CHAR, 0); }
		public TerminalNode SEMICOLON() { return getToken(olympusParser.SEMICOLON, 0); }
		public Dlc_charContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dlc_char; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).enterDlc_char(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).exitDlc_char(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof olympusVisitor ) return ((olympusVisitor<? extends T>)visitor).visitDlc_char(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dlc_charContext dlc_char() throws RecognitionException {
		Dlc_charContext _localctx = new Dlc_charContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dlc_char);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(CHARACTER);
			setState(144);
			match(IDENTIFIER);
			setState(145);
			match(ASSIGN);
			setState(146);
			match(CHAR);
			setState(147);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dlc_boolContext extends ParserRuleContext {
		public TerminalNode BOOL() { return getToken(olympusParser.BOOL, 0); }
		public TerminalNode IDENTIFIER() { return getToken(olympusParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(olympusParser.ASSIGN, 0); }
		public TerminalNode BOOL_V() { return getToken(olympusParser.BOOL_V, 0); }
		public TerminalNode SEMICOLON() { return getToken(olympusParser.SEMICOLON, 0); }
		public Dlc_boolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dlc_bool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).enterDlc_bool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).exitDlc_bool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof olympusVisitor ) return ((olympusVisitor<? extends T>)visitor).visitDlc_bool(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dlc_boolContext dlc_bool() throws RecognitionException {
		Dlc_boolContext _localctx = new Dlc_boolContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dlc_bool);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(BOOL);
			setState(150);
			match(IDENTIFIER);
			setState(151);
			match(ASSIGN);
			setState(152);
			match(BOOL_V);
			setState(153);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Empty_stringContext extends ParserRuleContext {
		public List<TerminalNode> QUOTES() { return getTokens(olympusParser.QUOTES); }
		public TerminalNode QUOTES(int i) {
			return getToken(olympusParser.QUOTES, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(olympusParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(olympusParser.IDENTIFIER, i);
		}
		public Empty_stringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_empty_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).enterEmpty_string(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof olympusListener ) ((olympusListener)listener).exitEmpty_string(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof olympusVisitor ) return ((olympusVisitor<? extends T>)visitor).visitEmpty_string(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Empty_stringContext empty_string() throws RecognitionException {
		Empty_stringContext _localctx = new Empty_stringContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_empty_string);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(QUOTES);
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(156);
				match(IDENTIFIER);
				}
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(162);
			match(QUOTES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
